# course_work_4

./: README.MD  pyproject.toml
src/: API_classes.py  main.py  vacancy_classes.py
tests/: test_vacancy.py
